# Rune

./: .gitignore  Cargo.toml  README.md
.devin/: wiki.json
.github/workflows/: ci.yml
api/: registry-openapi.yml
builder-wasm/: Cargo.toml
builder-wasm/src/: lib.rs
builder-wasm/src/builder/: mod.rs
builder-wasm/src/filesystem/: memory.rs  mod.rs
builder-wasm/src/parser/: mod.rs
builder-wasm/src/types/: mod.rs
editors/vscode/: package.json
editors/vscode/syntaxes/: runefile.tmLanguage.json
lsp-wasm/: Cargo.toml
lsp-wasm/src/: lib.rs
lsp-wasm/src/completion/: mod.rs
lsp-wasm/src/hover/: mod.rs
lsp-wasm/src/parser/: mod.rs  types.rs
lsp-wasm/src/server/: mod.rs
packaging/config/: auth.example.yml  registry.example.yml
packaging/debian/: changelog  control  copyright  postinst  prerm  rules
packaging/systemd/: rune-registry.service  rune.service  rune.socket
rune-wasm/: Cargo.toml
rune-wasm/src/: lib.rs
rune-wasm/src/builder/: mod.rs
rune-wasm/src/client/: local.rs  mod.rs
rune-wasm/src/compose/: mod.rs
rune-wasm/src/types/: mod.rs
rune-wasm/src/utils/: mod.rs
src/: error.rs  lib.rs  main.rs
src/compose/: config.rs  mod.rs  orchestrator.rs  parser.rs
src/container/: config.rs  lifecycle.rs  mod.rs  runtime.rs
src/daemon/: api.rs  mod.rs  server.rs
src/image/: builder.rs  mod.rs  registry.rs  store.rs
src/lsp/: completion.rs  diagnostics.rs  hover.rs  mod.rs  server.rs  syntax.rs
src/network/: bridge.rs  config.rs  mod.rs
src/registry/: auth.rs  mod.rs  server.rs  storage.rs
src/runtime/: cgroup.rs  mod.rs  mount.rs  namespace.rs  process.rs  syscall.rs
src/storage/: mod.rs  volume.rs
src/swarm/: cluster.rs  config.rs  mod.rs  node.rs  service.rs  task.rs
src/tui/: app.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
