[package]
name = "runefile-builder-wasm"
version = "0.1.0"
edition = "2021"
description = "Runefile image builder for WebAssembly with bring-your-own-filesystem support"
authors = ["Evoker Industries"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
