[package]
name = "runefile-lsp-wasm"
version = "0.1.0"
edition = "2021"
description = "Runefile Language Server Protocol implementation for WebAssembly"
authors = ["Evoker Industries"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
