[package]
name = "rune-wasm"
version = "0.1.0"
edition = "2021"
description = "Rune container runtime for WebAssembly - browser-based container management"
authors = ["Evoker Industries"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Storage",
] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
